--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "booApp",
+  "name": "booProject_fe",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,32 +10,32 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/stack": "^6.0.11",
-    "axios": "^0.24.0",
-    "immer": "^9.0.6",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.0.7",
+    "axios": "^0.24.0",
+    "immer": "^9.0.6",
     "react-native-date-picker": "^4.1.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.2.2",
+    "react-native-rename": "^2.9.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "^3.7.2",
     "use-immer": "^0.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@types/react": "^17.0.35",
-    "@types/react-native": "^0.66.4",
-    "@types/react-test-renderer": "^17.0.1",
-    "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
-    "jest": "^26.6.3",
+    "@babel/core": "^7.16.0",
+    "@babel/runtime": "^7.16.3",
+    "@react-native-community/eslint-config": "^3.0.1",
+    "babel-jest": "^27.4.2",
+    "eslint": "^8.4.0",
+    "jest": "^27.4.3",
     "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2",
-    "typescript": "^4.4.4"
+    "react-test-renderer": "17.0.2"
   },
   "jest": {
     "preset": "react-native"
