--- a/ios/booProject_fe/Info.plist
+++ b/ios/booProject_fe/Info.plist
@@ -37,6 +37,13 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Fonts/SpoqaHanSansNeo-Bold.ttf</string>
+		<string>Fonts/SpoqaHanSansNeo-Light.ttf</string>
+		<string>Fonts/SpoqaHanSansNeo-Medium.ttf</string>
+		<string>Fonts/SpoqaHanSansNeo-Regular.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
