--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.66.3",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "axios": "^0.24.0",
     "immer": "^9.0.6",
+    "react": "17.0.2",
+    "react-native": "0.66.3",
     "react-native-date-picker": "^4.1.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.2",
